[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/aspara_gus (3).png" type="Texture" id=1]
[ext_resource path="res://Assets/aspara_gus (2).png" type="Texture" id=2]
[ext_resource path="res://Assets/aspara_gus.png" type="Texture" id=3]
[ext_resource path="res://aspara_gus_man.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 1648.0

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[node name="aspara_gus_man" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 11
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 3.14159
shape = SubResource( 3 )

[node name="attack_box" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_box"]
shape = SubResource( 4 )

[node name="hit_timer" type="Timer" parent="."]
one_shot = true

[node name="name_teg" type="Label" parent="."]
margin_left = -32.0
margin_top = -40.0
margin_right = 37.0
margin_bottom = -26.0
text = "aspara_gus"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="phase_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="spawn_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="phase_timer" to="." method="_on_phase_timer_timeout"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
